--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
 }
